update pip call
* update pip call to support idle shell
* remove video-engine binery files and they will be downloaded automaticlyy at first run (reduce script size)
* update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ sdist/
 var/
 wheels/
 *.egg-info/
+video-engine/
+export/
 .installed.cfg
 *.egg
 MANIFEST
@@ -34,6 +36,9 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+cookies
+settings.ini
+queue.txt
 
 # Unit test / coverage reports
 htmlcov/
